Charlotte, NC page added

--- a/temples.html
+++ b/temples.html
@@ -44,7 +44,7 @@
                     <figcaption>Memphis, Tennessee Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/raleigh_nc_temple1.jpg" alt="Washington DC Temple">
+                    <img src="images/raleigh_nc_temple.jpg" alt="Washington DC, USA Temple">
                     <figcaption>Washington DC Temple</figcaption>
                 </figure>
                 <figure>
@@ -52,7 +52,7 @@
                     <figcaption>St. George, Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/gunnell_Manila_Temple.jpg" alt="Gunnell Manila Temple">
+                    <img src="images/gunnell_Manila_Temple.jpg" alt="Gunnell, Manila Temple">
                     <figcaption>Gunnell, Manila Temple</figcaption>
                 </figure>
                 <figure>
@@ -68,7 +68,7 @@
                     <figcaption>Nauvoo, Illinois Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/star_valley_wyoming_temple.jpg" alt="Star Valley Temple">
+                    <img src="images/star_valley_wyoming_temple.jpg" alt="Star Valley, Wyoming Temple">
                     <figcaption>Star Valley, Wyoming Temple</figcaption>
                 </figure>
                 <figure>
